--- a/doc/api.adoc
+++ b/doc/api.adoc
@@ -243,8 +243,8 @@ components:                                                                 #<.>
 <.> api返回对象
 <.> api 请求body对象；
 <.> 对象应用位置
-<.> 公共组件列表
+<.> 公共组件列表,dto,model
 
-//== 编写指南
+== 编写指南
 
-
+idea 下载
